<resources>
    <string name="app_name">Link</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="welcom_to_link_chatting_platform">Welcom To Link Chatting Platform</string>
    <string name="display_name">Display Name</string>
    <string name="display_email">Display Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="this_is_main_page">This is Main Page</string>
    <string name="log_out">Log Out</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">ALREADY REGISTERED</string>
    <string name="enter_email_address">Enter Email Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_am_using_link_chat">Hi there, I am using link chat</string>
    <string name="change_image">change image</string>
    <string name="change_status">Change status</string>
</resources>
